--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
+
+.vs/
+.vscode/
 /[Ll]ibrary/
 /[Tt]emp/
 /[Oo]bj/
